<resources>
    <string name="app_name">Trade Check Report</string>
    <string name="app_name_beta">Beta Trade Check Report</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter By</string>
    <string name="action_report_filter">Filter By</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample">sample</string>
    <string name="sample_icon">5</string>
    <string name="check_apk">Check new update</string>

    <string name="tcr_sharedpref">PREFERENCE_FILE_KEY</string>
    <string name="pref_hash">HASH_KEY</string>
    <string name="pref_isLogged">LOGGED_KEY</string>
    <string name="pref_oldvcode">OLD_VERSION_CODE</string>
    <string name="action_error_send">Send error report</string>
    <string name="pref_date_log">DATE_LOG</string>
    <string name="action_sync_mfile">Sync new masterfile</string>
    <string name="pref_username">USER_NAME</string>
    <string name="pref_password">PASS_WORD</string>
    <string name="pref_adminmode">ADMIN_MODE</string>
    <string name="action_filterby_area">Filter by area</string>
    <string name="action_filterby_remarks">Filter by remarks</string>
    <string name="action_filterby_showall">Show all</string>
    <string name="action_set_filter">Set filter by</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_sort_by_alphabetically">Alphabetical order</string>
    <string name="action_sort_by_template">Default order</string>
    <string name="string_sos_report">SOS Report</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to AppSettings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="tcr_sharedprefKey">TCR_PREF_KEY</string>
    <string name="pref_db_backup_version">PREF_KEY_DBVERSION</string>
    <string name="pref_header_database">Database</string>
    <string name="pref_header_info">About TCR</string>
    <string name="prompt_username">Username</string>
    <string name="string_log_in">LOG IN</string>
    <string name="string_copyright">Copyright \u00a9 Chase Technologies Corp.</string>
    <string name="send_bug_report">Can\'t log in? Send report <u>here</u>.</string>
    <string name="search_title">Search</string>
</resources>
