<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/searchStore"
        android:title="@string/search_title"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_set_filter"
        android:title="@string/action_set_filter"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_filterby_showall"
        android:title="@string/action_filterby_showall"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
