<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_sort_by"
        android:title="@string/action_sort_by"
        android:orderInCategory="100" app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_sort_by_alphabetically"
                android:title="@string/action_sort_by_alphabetically"
                android:orderInCategory="100" app:showAsAction="never" />
            <item android:id="@+id/action_sort_by_template"
                android:title="@string/action_sort_by_template"
                android:orderInCategory="100" app:showAsAction="never" />
        </menu>
    </item>

</menu>
